// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Function MarkSeen] match snapshot 1`] = `
Array [
  Object {
    "node": Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {},
      "type": [Function],
    },
    "path": "$",
    "type": "unit",
    "value": Object {
      "sender_action": "mark_seen",
    },
  },
]
`;

exports[`[Function TypingOff] match snapshot 1`] = `
Array [
  Object {
    "node": Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {},
      "type": [Function],
    },
    "path": "$",
    "type": "unit",
    "value": Object {
      "sender_action": "typing_off",
    },
  },
]
`;

exports[`[Function TypingOn] match snapshot 1`] = `
Array [
  Object {
    "node": Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {},
      "type": [Function],
    },
    "path": "$",
    "type": "unit",
    "value": Object {
      "sender_action": "typing_on",
    },
  },
]
`;
